--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <div>This is an Angular app</div>
-<app-comments></app-comments>
-<app-comments-checker></app-comments-checker>
+<nav>
+  <a routerLink="comments">Comments</a>
+  <br/>
+  <a routerLink="comments-checker">Comments-checker</a>
+  <br/>
+  <a routerLink="">Home</a>
+  <br/>
+  <a routerLink="numbers-observable">Numbers observable</a>
+</nav>
+<router-outlet></router-outlet>
