--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -1,19 +1,16 @@
 <h1>Comments</h1>
 
 <h2>Subscribed</h2>
-<p *ngFor="let comment of comments">
+<p *ngFor="let comment of comments; trackBy: trackByAsyncData">
   {{comment.body}}
 </p>
 
-
 <h2>Async pipe</h2>
 <div *ngIf="$comments | async as data">
-  <p *ngFor="let dataItem of data">
+  <p *ngFor="let dataItem of data; trackBy: trackByAsyncData">
     {{dataItem.body}}
   </p>
 </div>
 
 
-<h2>Error</h2>
-
-<div *ngIf="error">{{error}}</div>
+<app-error-block [error]="error"></app-error-block>
